| Bug #5985 | prepare stmt from "select rand(?)" crashes server | ||
|---|---|---|---|
| Submitted: | 8 Oct 2004 18:20 | Modified: | 14 Oct 2004 1:09 |
| Reporter: | Konstantin Osipov | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.* | OS: | Any (All) |
| Assigned to: | Konstantin Osipov | Target Version: | |
[8 Oct 2004 18:20]
Konstantin Osipov
[13 Oct 2004 1:37]
Konstantin Osipov
Subject: bk commit - 4.1 tree (konstantin:1.2089) BUG#5985 ChangeSet 1.2089 04/10/13 03:27:11 konstantin@mysql.com +9 -0 A fix and test case for Bug#5985 ""prepare stmt from "select rand(?)" crashes server." The fix makes Item_func_rand prepared-statements aware plus it fixes the case when RAND is used in prepared statements and replication is on (as well as several similar issues). Until now we did not reset THD before every execution of a prepared statement, so if some execution had set thd->time_zone_used or thd->rand_used they would not be reset until next mysql_parse.
[14 Oct 2004 1:09]
Konstantin Osipov
Fixed in 4.1.7
